--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,19 +1,19 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: Build
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+   
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
@@ -21,7 +21,6 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore SchoolBus.Blazor.sln
     - name: Build
-      run: dotnet build --no-restore
-
+      run: dotnet build CleanArchitecture.Blazor.sln --no-restore --configuration Release
