--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore SchoolBus.Blazor.sln
     - name: Build
-      run: dotnet build CleanArchitecture.Blazor.sln --no-restore --configuration Release
+      run: dotnet build SchoolBus.Blazor.sln --no-restore --configuration Release
