--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.11" />
+    <PackageReference Include="shortid" Version="4.0.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
     <PackageReference Include="Hangfire.Core" Version="1.8.5" />
   </ItemGroup>
