--- a/src/Blazor.Server.UI/appsettings.json
+++ b/src/Blazor.Server.UI/appsettings.json
@@ -52,7 +52,8 @@
     "LogClientIpAddresses": true,
     "LogClientAgents": true,
     "UseGoogleAnalytics": false,
-    "GoogleAnalyticsKey": ""
+    "GoogleAnalyticsKey": "",
+    "BingMampKey": "ArfC1CsvtWkGyBj6pyYm54rt5ZioabRartYr9jk8C31iIiapX_gqQO3_mo0w9Akg"
   },
   "Serilog": {
     "MinimumLevel": {
