--- a/src/Blazor.Server.UI/Blazor.Server.UI.csproj
+++ b/src/Blazor.Server.UI/Blazor.Server.UI.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
         <PackageReference Include="BlazorTime" Version="1.0.3" />
        <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.5.10" />
+       <PackageReference Include="Html5QrcodeBlazor.Wrapper" Version="1.0.0" />
        <PackageReference Include="MudBlazor" Version="6.10.0" />
        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
