--- a/src/Blazor.Server.UI/Blazor.Server.UI.csproj
+++ b/src/Blazor.Server.UI/Blazor.Server.UI.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
         <PackageReference Include="Blazor-Analytics" Version="3.12.0" />
         <PackageReference Include="Blazor-ApexCharts" Version="1.2.1" />
+        <PackageReference Include="Blazor.Geolocation" Version="7.0.3" />
         <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
         <PackageReference Include="BlazorTime" Version="1.0.3" />
        <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.5.10" />
