--- a/src/Blazor.Server.UI/Blazor.Server.UI.csproj
+++ b/src/Blazor.Server.UI/Blazor.Server.UI.csproj
@@ -15,7 +15,7 @@
         <PackageReference Include="Blazor.Geolocation" Version="7.0.3" />
         <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
         <PackageReference Include="BlazorTime" Version="1.0.3" />
-       <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.5.10" />
+       <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="6.6.0" />
        <PackageReference Include="Html5QrcodeBlazor.Wrapper" Version="1.0.0" />
        <PackageReference Include="MudBlazor" Version="6.10.0" />
        <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
@@ -23,7 +23,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Toolbelt.Blazor.HotKeys2" Version="3.0.0" />
+        <PackageReference Include="Toolbelt.Blazor.HotKeys2" Version="3.1.0" />
 
     </ItemGroup>
     <ItemGroup>
@@ -44,6 +44,7 @@
       <Folder Include="Pages\Schools\Components\" />
       <Folder Include="Pages\Students\Components\" />
       <Folder Include="Pages\TransportLogs\Components\" />
+      <Folder Include="Pages\TripReports\Components\" />
       <Folder Include="wwwroot\img\" />
     </ItemGroup>
 </Project>
