--- a/src/Blazor.Server.UI/appsettings.json
+++ b/src/Blazor.Server.UI/appsettings.json
@@ -1,10 +1,10 @@
 {
   "UseInMemoryDatabase": false,
   "DatabaseSettings": {
-    "DBProvider": "sqlite",
-    "ConnectionString": "Data Source=schoolbusdb.db"
-    //"DBProvider": "postgresql",
-    //"ConnectionString": "Server=10.33.1.166;Database=schoolbusdb;User Id=root;Password=3#uKC!;Port=5432"
+    //"DBProvider": "sqlite",
+    //"ConnectionString": "Data Source=schoolbusdb.db"
+    "DBProvider": "postgresql",
+    "ConnectionString": "Server=10.33.1.166;Database=schoolbusdb;User Id=root;Password=3#uKC!;Port=5432"
   },
   "Logging": {
     "LogLevel": {
