--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -28,6 +28,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="7.0.12" />
     <PackageReference Include="shortid" Version="4.0.0" />
+    <PackageReference Include="Stl.Fusion" Version="6.5.1" />
+       <PackageReference Include="Stl.Generators" Version="6.5.1" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
     <PackageReference Include="Hangfire.Core" Version="1.8.5" />
   </ItemGroup>
