--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -27,8 +27,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.4" />
     <PackageReference Include="shortid" Version="4.0.0" />
-    <PackageReference Include="Stl.Fusion" Version="6.8.11" />
-       <PackageReference Include="Stl.Generators" Version="6.8.11" />
+      <PackageReference Include="ActualLab.Fusion" Version="7.9.6" />
+      <PackageReference Include="ActualLab.Fusion.Blazor" Version="7.9.6" />
+       <PackageReference Include="ActualLab.Generators" Version="7.9.6" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
     <PackageReference Include="Hangfire.Core" Version="1.8.12" />
   </ItemGroup>
